--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaPuntoVenta/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaPuntoVenta/Index.cshtml
@@ -465,7 +465,7 @@
                 $("#TotalFactura").val(data.total);
 
                 $("#modal-default-ResumenFactura").modal('show');
-                GridViewPartial_FinalizarPedido.PerformCallback();
+                gv_FinalizarPedido.PerformCallback();
             },
             error: function (error) {
             }
@@ -505,9 +505,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="Cantidad">Cantidad</label>
-                                @Html.TextBoxFor(q => q.CantidadItem, new { @class = "form-control", @readonly = "readonly", @id="CantidadItem" })
+                            <div class="input-group margin">
+                                @Html.TextBoxFor(q => q.CantidadItem, new { @class = "form-control",  @id="CantidadItem" })
+                                <span class="input-group-btn">
+                                    <button type="button" title="Borrar" class="btn btn-danger form-control" onclick="Borrar();" style="width:auto; padding:6px 7px"><i class="fa fa-toggle-left"></i></button>
+                                </span>
+                                
                             </div>
                         </div>
                     </div>
@@ -517,32 +520,43 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('1');" style="width:auto">1</button>
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('2');" style="width:auto">2</button>
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('3');" style="width:auto">3</button>
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('4');" style="width:auto">4</button>                                   
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('1');" style="width:auto">1</button>
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('2');" style="width:auto">2</button>
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('3');" style="width:auto">3</button>
+                                    
                                 </div>
-                                <div class="btn-group">                                    
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('5');" style="width:auto">5</button>
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('6');" style="width:auto">6</button>
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('7');" style="width:auto">7</button>
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('8');" style="width:auto">8</button>
+                            </div>
+                            <div class="form-group">
+                                <div class="btn-group">
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('4');" style="width:auto">4</button>
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('5');" style="width:auto">5</button>
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('6');" style="width:auto">6</button>
+                                    
                                 </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="btn-group">
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('7');" style="width:auto">7</button>
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('8');" style="width:auto">8</button>
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('9');" style="width:auto">9</button>
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <div class="btn-group">                                    
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('9');" style="width:auto">9</button>
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('0');" style="width:auto">0</button>
-                                    <button type="button" class="btn btn-default" onclick="EscribirCantidad('.');" style="width:auto">&nbsp;.</button>  
-                                    <button type="button" title="Borrar" class="btn btn-danger" onclick="Borrar();" style="width:auto; padding:6px 7px"><i class="fa fa-fw fa-remove"></i></button>                                  
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('0');" style="width:auto">0</button>
+                                    <button type="button" class="btn-lg btn-default" onclick="EscribirCantidad('.');" style="width:auto">&nbsp;.</button>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
-            </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" onclick="ModificarCantidad();">Ok</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
             </div>
+            </div>
+            
         </div>
 
     </div>
@@ -557,10 +571,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="IdCliente"></label>
-                                @Html.Action("GridViewPartial_FinalizarPedido")
-                            </div>
+                            <label for="IdCliente"></label>
+                            @Html.Action("GridViewPartial_FinalizarPedido")
                         </div>
                     </div>
                 </div>
