--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaPuntoVenta/_GridViewPartial_Producto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaPuntoVenta/_GridViewPartial_Producto.cshtml
@@ -19,7 +19,7 @@
 
         //Configuración scrolling y pager
         settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
+        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Hidden;
         settings.Settings.VerticalScrollableHeight = 400;
         settings.SettingsPager.Visible = true;
         settings.SettingsPager.PageSize = 10;
@@ -76,17 +76,25 @@
         });
         settings.Columns.Add(column =>
         {
-            column.Caption = "";
-            column.FieldName = "";
+            column.Caption = " ";            
+            column.FieldName = "IdProducto";
             column.Width = Unit.Percentage(5);
             column.VisibleIndex = 3;
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.UnboundType = DevExpress.Data.UnboundColumnType.String;
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon glyphicon-plus\" onclick=\"AgregarPedido('" + c.KeyValue + "');\"></span>");
+                ViewContext.Writer.Write("<span class=\"glyphicon glyphicon-plus\";\"></span>");
             });
         });
+
+        settings.HtmlDataCellPrepared = (sender, e) =>
+        {
+            e.Cell.Attributes.Add(
+                "onclick",
+                string.Format("AgregarPedido('{0}');", e.KeyValue)
+            );
+        };
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
