--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaPuntoVenta/_GridViewPartial_FinalizarPedido.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaPuntoVenta/_GridViewPartial_FinalizarPedido.cshtml
@@ -58,8 +58,8 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_total";
-            column.Caption = "Total";
+            column.FieldName = "vt_Subtotal";
+            column.Caption = "SubTotal";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
             column.VisibleIndex = 4;
