--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaPuntoVenta/_GridViewPartial_Producto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaPuntoVenta/_GridViewPartial_Producto.cshtml
@@ -20,9 +20,9 @@
         //Configuración scrolling y pager
         settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
         settings.Settings.VerticalScrollBarMode = ScrollBarMode.Hidden;
-        settings.Settings.VerticalScrollableHeight = 400;
+        settings.Settings.VerticalScrollableHeight = 350;
         settings.SettingsPager.Visible = true;
-        settings.SettingsPager.PageSize = 10;
+        settings.SettingsPager.PageSize = 8;
         settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
         settings.SettingsPager.AlwaysShowPager = true;
         //Configuración filtro por columna
@@ -77,7 +77,7 @@
         settings.Columns.Add(column =>
         {
             column.Caption = " ";            
-            column.FieldName = "IdProducto";
+            column.FieldName = "IdString";
             column.Width = Unit.Percentage(5);
             column.VisibleIndex = 3;
             column.EditFormSettings.Visible = DefaultBoolean.False;
